Link css/style.css to index.html, add placeholder for navigation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="css/style.css">
 		<title>
 			Simply Sam - Home
 		</title>
@@ -10,6 +11,9 @@
 
 	<body>
 		<header>
+			<nav>
+				
+			</nav>
 			<hgroup>
 				<h1>Simply Sam</h1>
 				<p>Mindfully Authentic</p>
